<resources>
    <string name="app_name">TimedTicTacToe</string>

    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>

    <string name="ButtonText">START</string>

    <string name="gameTimeKey">com.miami.c11305010.timedtictactoe.game_time</string>
    <string name="goesFirstKey">com.miami.c11305010.timedtictactoe.goes_first</string>
    <string name="winnerKey">com.miami.c11305010.timedtictactoe.the_winner</string>

    <!-- MENU STRING -->
    <string name="menuGameTime">Select Game Time</string>
    <string name="menuReset">Reset Tournament</string>

    <!-- TIME SUBMENU STRINGS -->
    <string name="oneSec">1 sec</string>
    <string name="twoSec">2 sec</string>
    <string name="fiveSec">3 sec</string>
    <string name="tenSec">10 sec</string>

</resources>
