<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miami.c11305010.timedtictactoe.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!-- For Player 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/player1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player1"
                android:textSize="@dimen/player_textsize">
            </TextView>
            <ImageView
                android:id="@+id/player1_icon"
                android:layout_width="@dimen/image_dimen"
                android:layout_height="@dimen/image_dimen">
            </ImageView>
        </LinearLayout>
        <RatingBar
            android:id="@+id/player1_rating"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rating_bar_h">
        </RatingBar>
    </LinearLayout>

    <!-- For Player 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/player2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player2"
                android:textSize="@dimen/player_textsize">
            </TextView>
            <ImageView
                android:id="@+id/player2_icon"
                android:layout_width="@dimen/image_dimen"
                android:layout_height="@dimen/image_dimen">
            </ImageView>
        </LinearLayout>
        <RatingBar
            android:id="@+id/player2_rating"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rating_bar_h">
        </RatingBar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/ButtonText"
            android:textSize="@dimen/button_text"
            android:onClick="onClickHandler">
        </Button>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
